ver1.1.8 mongo and read history
